# gc

./: Cargo.toml
derive/: Cargo.toml
examples/: atomic.example  bench.l  break.l  hamt_test.rs  local.l  minus.l  operator.example  recur.example  rel.l  test.l  test2.l
exec/: Cargo.toml
exec/.modules/: foo.l
exec/lib/: init.l
exec/src/: main.rs
gc/: Cargo.toml
gc/derive_mark/: Cargo.toml
gc/derive_mark/src/: lib.rs
gc/examples/: hamt_test.rs
gc/src/: lib.rs  mark.rs  obj.rs  ptr.rs
gc/src/hamt/: gc.rs  map.rs  mod.rs  set.rs  vec.rs
gc/src/hamt/config/: arc.rs  clone.rs  gc.rs  mod.rs  rc.rs
gc/src/hamt/gc/: mod.rs
gc/src/hamt/imperative/: map.rs  mod.rs
gc/src/hamt/iter/: mod.rs
gc/src/hamt/node/: collision.rs  interior.rs  mod.rs
gc/src/hamt/tests/: mod.rs
gc/src/hamt/util/: usize_metadata.rs
hamt/: Cargo.toml  LICENSE  README.md
hamt/src/: lib.rs  map.rs  set.rs  vec.rs
hamt/src/config/: arc.rs  clone.rs  common.rs  kvp.rs  mod.rs  rc.rs
hamt/src/imperative/: map.rs
hamt/src/iter/: mod.rs
hamt/src/node/: collision.rs  interior.rs  leaf.rs  mod.rs
hamt/tests/: basic.rs
interpreter/: Cargo.toml  grammar.md
interpreter/src/: ast.rs  builtins.rs  lib.rs  list.rs  locals.rs  read.rs  scope.rs  value.rs
interpreter/src/util/: unordered_pair.rs
interpreter/src/value/: block.rs  function.rs  hamt.rs  mod.rs  native.rs  number.rs  primitive.rs  sigil.rs  string.rs  symbol.rs  tuple.rs  type.rs
interpreter/src/value2/: block.rs  function.rs  hamt.rs  mod.rs  native.rs  nil.rs  number.rs  primitive.rs  sigil.rs  string.rs  symbol.rs  tuple.rs  type.rs
min_test/: Cargo.toml
min_test/src/: main.rs  windows.rs
src/: lib.rs  mark.rs  obj.rs  ptr.rs
src/hamt/: mod.rs
