[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:lazy_static"]

[dev-dependencies]
libc = "0.2"

[dependencies]
spin = "0.9"
lazy_static = { version = "1", optional = true}

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1


