[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["dep:lazy_static", "rand/std", "rand/std_rng"]

[dev-dependencies]
libc = "0.2"
#compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["mem"] }

[dependencies]
spin = "0.9"
lazy_static = { version = "1", optional = true}
rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom"] }

[profile.release]
lto = true
opt-level = "s"
# strip = true
panic = "abort"
codegen-units = 1


