[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = { path = "../gc" }
hamt = { path = "../hamt" }
seglisp = { path = "../../seglisp/seglisp/", default-features = false, features = [
    "print_diagnostics",
] }
itertools = "0.11"
phf = { version = "0.11", features = ["macros"] }
